# powerfactory-tools

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  build-issue-template.md  documentation-issue-template.md  feature_request.md
.github/workflows/: check-code.yml  checks.yml  create-release.yml  draft-pdf.yml  release-version.yml  release.yml  test-code.yml  tests.yml
docs/: paper.bib  paper.md
docs/joss_paper/: paper.bib  paper.md
docs/paper/: paper.md
examples/: README.md  powerfactory_control.ipynb  powerfactory_control__add_loads.ipynb  powerfactory_control__basic.ipynb  powerfactory_control__multiple_projects.ipynb  powerfactory_export.ipynb  powerfactory_import.ipynb
examples/grids/: HV_7_Bus.pfd  HV_7_Bus_OutOfService_Set1_steadystate_case.json  HV_7_Bus_OutOfService_Set1_topology_case.json  HV_7_Bus_steadystate_case.json  HV_7_Bus_topology.json  HV_7_Bus_topology_case.json  HV_8_Bus.pfd  HV_8_Bus_Set1_steadystate_case.json  HV_8_Bus_Set1_topology_case.json  HV_8_Bus_steadystate_case.json  HV_8_Bus_topology.json  HV_8_Bus_topology_case.json  HV_9_Bus_Set1_steadystate_case.json  HV_9_Bus_Set1_topology_case.json  HV_9_Bus_steadystate_case.json  HV_9_Bus_topology.json  HV_9_Bus_topology_case.json  PF2021_PowerFactory-Tools.pfd  PF2022_PowerFactory-Tools.pfd  PF2024_PowerFactory-Tools.pfd  PF2025_PowerFactory-Tools.pfd  PF2026_PowerFactory-Tools.pfd  PowerFactory-Tools.pfd
examples/grids/3_Bus/: 3_Bus_HV_3_Bus_steadystate_case.json  3_Bus_HV_3_Bus_topology.json  3_Bus_HV_3_Bus_topology_case.json  3_Bus__HV_3_Bus__steadystate_case.json  3_Bus__HV_3_Bus__topology.json  3_Bus__HV_3_Bus__topology_case.json
examples/grids/Base/: Base_HV_9_Bus_steadystate_case.json  Base_HV_9_Bus_topology.json  Base_HV_9_Bus_topology_case.json  Base__HV_9_Bus__steadystate_case.json  Base__HV_9_Bus__topology.json  Base__HV_9_Bus__topology_case.json
examples/grids/Industry_Park/: Industry_Park_HV_9_Bus_steadystate_case.json  Industry_Park_HV_9_Bus_topology.json  Industry_Park_HV_9_Bus_topology_case.json  Industry_Park_MV_2_Bus_steadystate_case.json  Industry_Park_MV_2_Bus_topology.json  Industry_Park_MV_2_Bus_topology_case.json  Industry_Park__HV_9_Bus__steadystate_case.json  Industry_Park__HV_9_Bus__topology.json  Industry_Park__HV_9_Bus__topology_case.json  Industry_Park__MV_2_Bus__steadystate_case.json  Industry_Park__MV_2_Bus__topology.json  Industry_Park__MV_2_Bus__topology_case.json
examples/grids/Outage/: Outage_HV_9_Bus_steadystate_case.json  Outage_HV_9_Bus_topology.json  Outage_HV_9_Bus_topology_case.json  Outage__HV_9_Bus__steadystate_case.json  Outage__HV_9_Bus__topology.json  Outage__HV_9_Bus__topology_case.json
export/: HV_7_Bus_v2_steadystate_case.json  HV_7_Bus_v2_topology.json  HV_7_Bus_v2_topology_case.json  HV_8_Bus_topology_case.json
powerfactory_tools/: __init__.py  constants.py  exceptions.py  interface.py  io.py  powerfactory_types.py  quantities.py
powerfactory_tools/base/: constants.py  data.py  interface.py  quantities.py  types.py
powerfactory_tools/base/exporter/: exporter.py  load_power.py
powerfactory_tools/controller/: __init__.py  controller.py
powerfactory_tools/exporter/: __init__.py  exporter.py  load_power.py
powerfactory_tools/schema/: base.py
powerfactory_tools/schema/steadystate_case/: active_power.py  case.py  controller.py  external_grid.py  load.py  reactive_power.py  transformer.py
powerfactory_tools/schema/topology/: active_power.py  branch.py  characteristic.py  coupler.py  external_grid.py  load.py  load_model.py  node.py  reactive_power.py  switch.py  topology.py  transformer.py  windings.py
powerfactory_tools/schema/topology_case/: case.py  element_state.py
powerfactory_tools/utils/: __init__.py  io.py
powerfactory_tools/versions/: powerfactory.py  types.py
powerfactory_tools/versions/pf2022/: __init__.py  constants.py  data.py  exporter.py  interface.py  types.py
powerfactory_tools/versions/pf2022/exporter/: exporter.py  load_power.py
powerfactory_tools/versions/pf2022sp2/: data.py  exporter.py  interface.py
powerfactory_utils/: __init__.py  constants.py  exceptions.py  exporter.py  interface.py  powerfactory_types.py
powerfactory_utils/exporter/: __init__.py  exporter.py  load_power.py
powerfactory_utils/schema/: base.py
powerfactory_utils/schema/steadystate_case/: active_power.py  case.py  controller.py  external_grid.py  load.py  reactive_power.py  transformer.py
powerfactory_utils/schema/topology/: active_power.py  branch.py  characteristic.py  coupler.py  external_grid.py  load.py  load_model.py  node.py  reactive_power.py  switch.py  topology.py  transformer.py  windings.py
powerfactory_utils/schema/topology_case/: case.py  element_state.py
schema/1.0.0/: steady_state_case.json  topology.json  topology_case.json
schema/1.1.0/: steady_state_case.json  topology.json  topology_case.json
src/powerfactory_tools/: __version__.py  powerfactory_error_codes.py  str_constants.py
src/powerfactory_tools/utils/: __init__.py  io.py
src/powerfactory_tools/versions/pf2022/: __init__.py  constants.py  data.py  interface.py  quantities.py  types.py
src/powerfactory_tools/versions/pf2022/exporter/: exporter.py  load_power.py
src/powerfactory_tools/versions/pf2022/utils/: __init__.py  io.py
src/powerfactory_tools/versions/pf2024/: __init__.py  constants.py  data.py  interface.py  types.py
src/powerfactory_tools/versions/pf2024/exporter/: exporter.py  load_power.py
src/powerfactory_tools/versions/pf2024/utils/: __init__.py  io.py
src/powerfactory_tools/versions/pf2025/: __init__.py  constants.py  data.py  interface.py  quantities.py  types.py
src/powerfactory_tools/versions/pf2026/: __init__.py  constants.py  data.py  interface.py  quantities.py  types.py
tests/: conftest.py  test_active_power.py  test_branch.py  test_controller.py  test_interface.py  test_io.py  test_reactive_power.py  test_schema.py  test_topology_load.py
(+4 files in other folders)
